[package]
name = "letsroleffmusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bincode = "1.3.3"
directories = "4.0.1"
governor = "0.4.0"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
sled = "0.34.7"
taglib = "1.0.0"
tokio = { version = "1.15.0", features = ["full"] }
thiserror = "1.0.30"
youtube_dl = "0.6.3"

[build-dependencies]
vcpkg = "0.2.15"
